--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -51,7 +51,6 @@ img {
   font-size: 20px;
   font-family: Roboto, sans-serif;
 }
-
 .topnav a:hover {
   background-color: #ff0000;
   color: #ffffff;
@@ -81,10 +80,15 @@ img {
     color: #ffffff;
   }
   .topnav a.icon {
+    color: #ff0000;
+  }
+  .topnav a.icon:hover {
     color: #ffffff;
   }
+  .topnav span {
+    padding-right: 30px;
+  }
 }
-
 @media screen and (max-width: 768px) {
   .topnav.responsive {
     position: relative;
@@ -112,6 +116,9 @@ img {
   }
   .topnav a.icon:hover {
     color: #ffffff;
+  }
+  .topnav span {
+    padding-right: 0;
   }
 }
 
@@ -217,7 +224,6 @@ main {
   margin: auto;
   text-align: center;
   flex-direction: column;
-  justify-content: space-around;
   padding: 15px 8%;
   margin: 15px auto;
   min-height: 80vh;
@@ -228,6 +234,9 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.modal-confirmation h4 {
+  margin: auto;
 }
 
 @media screen and (max-width: 540px) {
@@ -543,7 +552,10 @@ footer {
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
+    padding: 0;
+    grid-column: unset;
+    text-align: left;
+    min-width: 100%;
   }
   .hero-content::after {
     content: unset;
@@ -552,7 +564,7 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     white-space: normal;
   }
   .hero-text {
@@ -570,6 +582,50 @@ footer {
   }
   .copyrights {
     margin-top: 50px;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .hero-section {
+    display: block;
+    box-shadow: unset;
+    min-height: 80vh;
+  }
+  .hero-content {
+    background: #fff;
+    color: #000;
+    padding: 0;
+    grid-column: unset;
+    text-align: left;
+    min-width: 100%;
+  }
+  .hero-content::after {
+    content: unset;
+  }
+  .hero-content .btn-signup {
+    display: none;
+  }
+  .hero-headline {
+    font-size: 2.5rem;
+    white-space: normal;
+  }
+  .hero-text {
+    width: unset;
+    font-size: 1rem;
+    margin-top: 40px;
+  }
+  .hero-img img {
+    border-radius: 10px;
+    margin-top: 40px;
+  }
+  .hero-section > .btn-signup {
+    display: block;
+    margin: 32px auto 10px;
+    padding: 12px 35px;
+  }
+  .copyrights {
+    margin-top: 20px;
     text-align: center;
   }
 }
